// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles namespaces correctly 1`] = `
[
  {
    "element": "<m:math xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" >
    <m:msup ><m:mn >2</m:mn><m:mn >2</m:mn></m:msup><m:mi >=</m:mi><m:mn >4</m:mn>
    <m:mn >3</m:mn><m:mi >&gt;</m:mi><m:mn >2</m:mn>
    <m:mi >&apos;</m:mi>x
</m:math>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "m:math",
    },
    "posEnd": [
      7,
      10,
    ],
    "posStart": [
      3,
      1,
    ],
    "tag": "m:math",
  },
  {
    "element": "<img xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns:why="would-you-do-this" why:maybe="for this reason"/>",
    "node": {
      "attributes": {
        "why:maybe": "for this reason",
        "xmlns:why": "would-you-do-this",
      },
      "isSelfClosing": true,
      "name": "img",
    },
    "posEnd": [
      8,
      69,
    ],
    "posStart": [
      8,
      5,
    ],
    "tag": "img",
  },
  {
    "element": "<c xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns:otherns="something-i-made-up" >
                    this should have all the namespaces
                </c>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "c",
    },
    "posEnd": [
      14,
      21,
    ],
    "posStart": [
      12,
      17,
    ],
    "tag": "c",
  },
  {
    "element": "<b xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns:otherns="something-i-made-up" data-math="i &lt; 3pi">
                <c >
                    this should have all the namespaces
                </c>
            </b>",
    "node": {
      "attributes": {
        "data-math": "i < 3pi",
      },
      "isSelfClosing": false,
      "name": "b",
    },
    "posEnd": [
      15,
      17,
    ],
    "posStart": [
      11,
      13,
    ],
    "tag": "b",
  },
  {
    "element": "<c xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" >
            this should only have top-level namespaces (mathml, epub, xhtml)
        </c>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "c",
    },
    "posEnd": [
      21,
      13,
    ],
    "posStart": [
      19,
      9,
    ],
    "tag": "c",
  },
]
`;

exports[`handles nested elements correctly 1`] = `
[
  {
    "element": "<b  data-self-closing="true"/>",
    "node": {
      "attributes": {
        "data-self-closing": "true",
      },
      "isSelfClosing": true,
      "name": "b",
    },
    "posEnd": [
      9,
      49,
    ],
    "posStart": [
      9,
      19,
    ],
    "tag": "b",
  },
  {
    "element": "<b  >
              inside second b
              <c >
                  something &amp; &quot;something else&quot;
                  <b data-self-closing="true"/>
              </c>
          </b>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "b",
    },
    "posEnd": [
      11,
      15,
    ],
    "posStart": [
      5,
      11,
    ],
    "tag": "b",
  },
  {
    "element": "<b  >
          inside first b
          <b >
              inside second b
              <c >
                  something &amp; &quot;something else&quot;
                  <b data-self-closing="true"/>
              </c>
          </b>
      </b>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "b",
    },
    "posEnd": [
      12,
      11,
    ],
    "posStart": [
      3,
      7,
    ],
    "tag": "b",
  },
]
`;

exports[`records comments 1`] = `
[
  {
    "element": "<a  >
    <!--
      This is
      a
      multiline
      comment
    -->
  </a>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "a",
    },
    "posEnd": [
      9,
      7,
    ],
    "posStart": [
      2,
      3,
    ],
    "tag": "a",
  },
]
`;

exports[`throws an error when there is cdata 1`] = `
[
  {
    "element": "<root  ><![CDATA[Some character data]]></root>",
    "node": {
      "attributes": {},
      "isSelfClosing": false,
      "name": "root",
    },
    "posEnd": [
      1,
      45,
    ],
    "posStart": [
      1,
      1,
    ],
    "tag": "root",
  },
]
`;
